syntax = "proto3";

package proto.model.v1;

option go_package = "github.com/go-jedi/auth/gen/proto/model/v1;protomodel";

import "google/protobuf/timestamp.proto";

message User {
  int64 id = 1;
  string username = 2;
  string full_name = 3;
  string email = 4;
  string password_hash = 5;
  bool deleted = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}